--- a/.projectrc
+++ b/.projectrc
@@ -8,7 +8,7 @@
   project_name: 'Docker Container for Soldo',
   project_slug: 'docker-soldo',
   project_abbr: 'dsoldo',
-  project_version: '1.0.0-rc',
+  project_version: '1.0.0',
   software_copyright: '2017 awmyhr',
   software_license: 'Apache-2.0'
 }
