--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -4,32 +4,24 @@
 # Project:   docker-soldo
 # Copyright: 2017, awmyhr
 # License:   Apache-2.0
-FROM ubuntu:latest
+FROM awmyhr/builders:ubuntu
 
-ENV container=docker \
-    PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-
-RUN apt-get update -qy \
-    && apt-get upgrade -qy
-
-RUN apt-get install -qy \
-        git \
-        cmake \
-        build-essential \
-        libboost-dev \
-        libboost-all-dev \
-    && cd /root \
+RUN cd /root \
     && git clone https://github.com/monselice/sld.git sld \
     && mkdir /root/sld/build \
     && cd /root/sld/build \
     && cmake .. \
     && cd .. \
-    && make
+    && make \
+    && cd /root/sld/build/release/src/ \
+    && tar -cf /build.tar sld[dmpw]
+
+CMD ["/bin/bash"]
 
 LABEL org.label-schema.name="soldo-build" \
       org.label-schema.vendor="awmyhr <awmyhr@gmail.com>" \
-      org.label-schema.version="0.1.0-alpha" \
-      org.label-schema.release="2017-12-27" \
+      org.label-schema.version="1.1.0-alpha" \
+      org.label-schema.release="2017-12-28" \
       org.label-schema.url="TODO: CHANGEME" \
       org.label-schema.vcs-type="git" \
       org.label-schema.vcs-url="TODO: CHANGEME" \
