--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -20,7 +20,7 @@ CMD ["/bin/bash"]
 
 LABEL org.label-schema.name="soldo-build" \
       org.label-schema.vendor="awmyhr <awmyhr@gmail.com>" \
-      org.label-schema.version="1.1.0-alpha" \
+      org.label-schema.version="1.1.0" \
       org.label-schema.release="2017-12-28" \
       org.label-schema.url="TODO: CHANGEME" \
       org.label-schema.vcs-type="git" \
