--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -6,12 +6,14 @@
 # License:   Apache-2.0
 FROM awmyhr/builders:ubuntu
 
+WORKDIR /root/
+
 RUN cd /root \
     && git clone https://github.com/monselice/sld.git sld \
-    && mkdir /root/sld/build \
+    && mkdir -p /root/sld/build \
     && cd /root/sld/build \
     && cmake .. \
-    && cd .. \
+    && cd /root/sld \
     && make \
     && cd /root/sld/build/release/src/ \
     && tar -cf /build.tar sld[dmpw]
@@ -20,11 +22,11 @@ CMD ["/bin/bash"]
 
 LABEL org.label-schema.name="soldo-build" \
       org.label-schema.vendor="awmyhr <awmyhr@gmail.com>" \
-      org.label-schema.version="1.1.0" \
-      org.label-schema.release="2017-12-28" \
-      org.label-schema.url="TODO: CHANGEME" \
+      org.label-schema.version="1.1.1" \
+      org.label-schema.release="2017-12-29" \
+      org.label-schema.url="https://hub.docker.com/r/awmyhr/soldo-miner" \
       org.label-schema.vcs-type="git" \
-      org.label-schema.vcs-url="TODO: CHANGEME" \
+      org.label-schema.vcs-url="https://github.com/awmyhr/docker-soldo" \
       org.label-schema.summary="Throw away container to build Soldo commands." \
       org.label-schema.description="Throw away container to build Soldo commands." \
       org.label-schema.schema-version='1.0.0-rc.1'
